--- a/public/stylesheets/main.scss
+++ b/public/stylesheets/main.scss
@@ -4,6 +4,9 @@ $font_bracket: "Times New Roman", "serif";
 
 $footer_height: 70px;
 
+$footer-mobile-height: 35px;
+$footer-mobile-breakpoint: 500px;
+
 html {
   position: relative;
   min-height: 100%;
@@ -12,10 +15,23 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: $footer_height;
+  @media (max-width: $footer-mobile-breakpoint) {
+	margin-bottom: $footer-mobile-height;
+  }
+
   background-color: black;
   font-family: $font_main;
   color: white;
   font-size: 12px;
+
+  // At small sizes just make the font size
+  // responsive to the screen height
+  @media (max-height: 700px) {
+
+	font-size: 1.5vh;
+
+  }
+
 }
 
 footer.sticky {
@@ -25,6 +41,9 @@ footer.sticky {
   width: 100%;
   /* Set the fixed height of the footer here */
   height: $footer_height;
+  @media (max-width: $footer-mobile-breakpoint) {
+	height: $footer-mobile-height;
+  }
 
   .container {
 	margin-top: 10px;
@@ -43,6 +62,15 @@ footer.sticky {
 
   font-weight: bold;
   font-size: 6.5em;
+
+  // At small sizes just make the font size
+  // responsive to the screen height
+  @media (max-width: 360px) {
+
+	font-size: 12vw;
+	line-height: 1em;
+
+  }
 
   &.studio1 {
 	color: red;
@@ -65,6 +93,14 @@ footer.sticky {
 #time {
 
   font-size: 13em;
+
+  // At small sizes just make the font size
+  // responsive to the screen height
+  @media (max-width: 360px) {
+
+	font-size: 25vw;
+
+  }
 
 }
 
@@ -126,6 +162,10 @@ footer.sticky {
 	padding: 0;
 
 	height: $footer_height;
+	@media (max-width: $footer-mobile-breakpoint) {
+	  height: $footer-mobile-height;
+	}
+
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -133,6 +173,14 @@ footer.sticky {
 	border: 2px solid white;
 
 	font-size: 2.5em;
+
+	// At small sizes just make the font size
+	// responsive to the screen width
+	@media (max-width: 768px) {
+
+	  font-size: 3.5vw;
+
+	}
 
 	&.worse {
 
