Adds currently playing song

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -140,6 +140,13 @@ footer.sticky {
 
 }
 
+#current-song {
+
+  font-size: 3.8em;
+  font-variant: small-caps;
+
+}
+
 #breaking-news {
 
   font-size: 5em;
