added countdown and up for 101
this is only temporary and should be reverted after 101

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -58,6 +58,20 @@ footer.sticky {
 
 }
 
+.counter {
+	font-size: 8em;
+	color: #7cd1ff;
+}
+
+#countdown101 {
+	color: #7cd1ff;
+}
+
+#countUP101 {
+	color: #7cd1ff;
+}
+
+
 #studio {
 
   font-weight: bold;
