--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -176,6 +176,16 @@ footer.sticky {
 
 }
 
+#availability-error {
+
+	color: red;
+  font-size: 24px;
+  margin-top: -30px;
+  height: 30px;
+  display: none;
+
+}
+
 #alerts {
 
   & > * {
