--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -84,28 +84,32 @@ footer.sticky {
 	font-size: 12vw;
 	line-height: 1em;
 
-  }
+	}
 
+	//Off Air
+	&.studio0 {
+		color: orange;
+	}
+
+	//Studio 1
   &.studio1 {
-	color: red;
+		color: red;
   }
 
+	//Studio 2
   &.studio2 {
-	color: rgb(36, 110, 230);
+		color: rgb(36, 110, 230);
   }
 
+	//Jukebox
   &.studio3 {
-	color: #0F0;
+		color: #0F0;
   }
 
+	//Outside Broadcast
   &.studio4 {
 	color: #bb00dc;
   }
-
-	//If we're off air
-	&.studio5 {
-	color: orange;
-	}
 }
 
 #time {
