--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -13,7 +13,6 @@ html {
 }
 
 body {
-
   display: flex;
   flex-direction: column;
 
@@ -26,7 +25,6 @@ body {
   // At small sizes just make the font size
   // responsive to the screen height
   @media (max-height: 700px) {
-
 	font-size: 1.5vh;
 
   }
@@ -64,130 +62,32 @@ footer.sticky {
 
 }
 
-#date {
-  font-size: 3.5em;
-}
-
-#studio {
-
-  font-weight: bold;
-  font-size: 6.5em;
-
-  // At small sizes just make the font size
-  // responsive to the screen height
-  @media (max-width: 360px) {
-
-	font-size: 12vw;
-	line-height: 1em;
-
-	}
-
-  //Studio 1
-  &.studio1 {
-    color: red;
-  }
-
-  //Studio 2
-  &.studio2 {
-    color: rgb(36, 110, 230);
-  }
-
-  //Jukebox
-  &.studio3 {
-    color: #0F0;
-  }
-
-  //Outside Broadcast
-  &.studio4 {
-    color: #bb00dc;
-  }
-
-  //Off Air
-  &.studio8 {
-    color: orange;
-  }
-}
-
-#time {
-
-  font-size: 12em;
-  line-height: 1em;
-
-  // At small sizes just make the font size
-  // responsive to the screen height
-  @media (max-width: 360px) {
-
-	  font-size: 25vw;
-
-  }
-
-}
-
-#current-show-title {
-
-  font-size: 3.8em;
-  font-variant: small-caps;
-
-  .content {
-
-	&::before, &::after {
-
-	  font-family: $font_bracket;
-	  font-size: 140%;
-	  letter-spacing: 2px;
-	  text-shadow: 0 0 30px #17A;
-
-	}
-
-	&::before {
-
-	  content: "((";
-
-	}
-
-	&::after {
-
-	  content: "))";
-
-	}
-
-	.news {
-	  color: #2CDFFF;
-	}
-
-  }
-
-}
-
 #current-track {
-
   font-size: 3.8em;
   font-variant: small-caps;
   border: 3px solid white;
-
 }
 
 #breaking-news {
-
   border: 3px solid #F00;
 }
+
 #breaking-news .content {
   font-weight: bold;
   color: #F00;
   font-size: 5em;
 }
+
 #breaking-news .content iframe{
   margin-bottom: -0.35em;
 }
 
 .up-next {
-
   font-size: 2.8em;
   font-variant: small-caps;
-
 }
-#status {
 
+#status {
   padding: 0;
   text-align: center;
   font-size: 0.9em;
@@ -202,65 +102,166 @@ footer.sticky {
     font-size: 0.7em;
 
   }
-
 }
 
 #alerts {
-
   & > * {
+    padding: 10px 0;
 
-	padding: 10px 0;
+    @media (max-width: $footer-mobile-breakpoint) {
+      height: $footer-mobile-height;
 
-	@media (max-width: $footer-mobile-breakpoint) {
-	  height: $footer-mobile-height;
+      padding-top: 8px;
+    }
 
-	  padding-top: 8px;
-	}
+    text-align: center;
 
-	text-align: center;
+    border: 3px solid white;
 
-	border: 3px solid white;
+    font-size: 2.5em;
 
-	font-size: 2.5em;
+    // At small sizes just make the font size
+    // responsive to the screen width
+    @media (max-width: 768px) {
+      font-size: 3.5vw;
+    }
 
-	// At small sizes just make the font size
-	// responsive to the screen width
-	@media (max-width: 768px) {
+    &.worse {
+      border: 3px solid #F00;
+      color: #F00;
 
-	  font-size: 3.5vw;
+      font-weight: bold;
+    }
 
-	}
+    &.bad {
+      border: 3px solid #F00;
+      color: #F00;
+    }
 
-	&.worse {
+    &.standby {
+      border: 3px solid orange;
+      color: orange;
+    }
 
-	  border: 3px solid #F00;
-	  color: #F00;
+    &.good {
+      border: 3px solid #00FF00;
+      color: #00FF00;
+    }
+  }
+}
 
-	  font-weight: bold;
 
-	}
+.main {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-auto-rows: 1fr min-content min-content min-content 2fr 1fr;
+  grid-template-areas: 
+  "weather date"
+  "current-show current-show"
+  "studio studio"
+  "time time"
+  "next0 next1";
 
-	&.bad {
+  #studio {
+    grid-area: studio;
 
-	  border: 3px solid #F00;
-	  color: #F00;
+    font-weight: bold;
+    font-size: 6.5em;
 
-	}
+    // At small sizes just make the font size
+    // responsive to the screen height
+    @media (max-width: 360px) {
+      font-size: 12vw;
+      line-height: 1em;
+    }
 
-	&.standby {
+    //Studio 1
+    &.studio1 {
+      color: red;
+    }
 
-	  border: 3px solid orange;
-	  color: orange;
+    //Studio 2
+    &.studio2 {
+      color: rgb(36, 110, 230);
+    }
 
-	}
+    //Jukebox
+    &.studio3 {
+      color: #0F0;
+    }
 
-	&.good {
+    //Outside Broadcast
+    &.studio4 {
+      color: #bb00dc;
+    }
 
-	  border: 3px solid #00FF00;
-	  color: #00FF00;
+    //Off Air
+    &.studio8 {
+      color: orange;
+    }
+  }
 
-	}
+  #date {
+    grid-area: date;
 
+    font-size: 3em;
+    text-align: right;
+    align-self: start;
+  }
+
+  #time {
+    grid-area: time;
+
+    font-size: 12em;
+    line-height: 1em;
+
+    // At small sizes just make the font size
+    // responsive to the screen height
+    @media (max-width: 360px) {
+	    font-size: 25vw;
+    }
+  }
+
+  #current-show-title {
+    grid-area: current-show;
+
+    font-size: 3.8em;
+    font-variant: small-caps;
+  
+    .content {
+      &::before, &::after {
+        font-family: $font_bracket;
+        font-size: 140%;
+        letter-spacing: 2px;
+        text-shadow: 0 0 30px #17A;
+      }
+    
+      &::before {
+        content: "((";
+      }
+    
+      &::after {
+        content: "))";
+      }
+    
+      .news {
+        color: #2CDFFF;
+      }
+    }
+  }
+
+  #next0 {
+    grid-area: next0;
+
+    align-self: center;
+  }
+
+  #next1 {
+    grid-area: next1;
+
+    align-self: center;
   }
 
 }
