--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -153,7 +153,7 @@ footer.sticky {
 
 .main {
   width: 100%;
-  height: 100%;
+  flex: 1;
   display: grid;
   grid-template-columns: 50% 50%;
   grid-auto-rows: 1fr min-content min-content min-content 2fr 1fr;
