--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -38,10 +38,6 @@ body {
   color: darkgrey;
 }
 
-.container {
-  flex: 1;
-}
-
 .text-center {
   width: 100%;
   margin: 0 auto;
@@ -156,7 +152,7 @@ footer.sticky {
   flex: 1;
   display: grid;
   grid-template-columns: 50% 50%;
-  grid-auto-rows: 1fr min-content min-content min-content 2fr 1fr;
+  grid-auto-rows: 1fr min-content min-content min-content 1fr;
   grid-template-areas: 
   "weather date"
   "current-show current-show"
@@ -209,6 +205,7 @@ footer.sticky {
     font-size: 3em;
     text-align: right;
     align-self: start;
+    padding: 0 10px;
   }
 
   #time {
