--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -13,24 +13,14 @@ html {
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-
   background-color: black;
   font-family: $font_main;
   color: white;
-  font-size: 12px;
+  font-size: 1.3vmin;
+
+  transition: 0.4s;
 
   height: 100vh;
-  // At small sizes just make the font size
-  // responsive to the screen height
-  @media (max-height: 700px) {
-	font-size: 1.5vh;
-
-  }
-  @media (min-width: 1600px) {
-    zoom: 1.2;
-  }
 
 }
 
@@ -56,12 +46,6 @@ footer.sticky {
 	margin-top: 10px;
   }
 
-}
-
-#current-track {
-  font-size: 3.8em;
-  font-variant: small-caps;
-  border: 3px solid white;
 }
 
 #breaking-news {
@@ -149,29 +133,38 @@ footer.sticky {
 
 .main {
   width: 100%;
-  flex: 1;
+  height: 100%;
   display: grid;
-  grid-template-columns: 50% 50%;
-  grid-auto-rows: 1fr min-content min-content min-content 1fr;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: 1fr min-content min-content min-content min-content 2fr min-content min-content;
   grid-template-areas: 
   "weather date"
   "current-show current-show"
   "studio studio"
   "time time"
-  "next0 next1";
+  "current-track current-track"
+  "next0 next1"
+  "breaking-news breaking-news"
+  "footer footer";
+
+  @media (min-width: 1600px) {
+    grid-template-columns: 1fr 1fr min-content;
+    grid-auto-rows: 1fr min-content min-content min-content min-content 2fr min-content;
+    grid-template-areas: 
+    "weather date breaking-news"
+    "current-show current-show breaking-news"
+    "studio studio breaking-news"
+    "time time breaking-news"
+    "current-track current-track breaking-news"
+    "next0 next1 breaking-news"
+    "footer footer breaking-news";
+  }
 
   #studio {
     grid-area: studio;
 
     font-weight: bold;
     font-size: 6.5em;
-
-    // At small sizes just make the font size
-    // responsive to the screen height
-    @media (max-width: 360px) {
-      font-size: 12vw;
-      line-height: 1em;
-    }
 
     //Studio 1
     &.studio1 {
@@ -252,13 +245,28 @@ footer.sticky {
   #next0 {
     grid-area: next0;
 
-    align-self: center;
+    align-self: end;
   }
 
   #next1 {
     grid-area: next1;
 
-    align-self: center;
+    align-self: end;
+  }
+
+  #current-track {
+    grid-area: current-track;
+    padding-top: 30px;
+    font-size: 3em;
+    font-variant: small-caps;
+  }
+
+  .footer {
+    grid-area: footer;
+  }
+
+  #breaking-news {
+    grid-area: breaking-news;
   }
 
 }
